Change List
=========
Version 1.0.1(Build 2019112100)
-Added more time options
-Better API cred error reporting
-Fixed broken en-GB transcription setting


Version 1.0.0(Build 2019050700)
-First release
