@@ -34,16 +34,18 @@
     max-width: 610px;
     width: 100%;
     font-family: Arial, sans-serif;
-    overflow-x: scroll;
+    /*overflow-x: scroll; */
     /* max-height: 298px; */
     border: 1px solid #111;
 }
 
 .qtype_cloudpoodll_transcript-header {
     height: 19px;
-    padding: 2px;
+    padding: 1px;
     font-weight: bold;
     text-align: center;
+    background-color: black;
+    color: white;
 }
 .qtype_cloudpoodll_transcript-selector {
     height: 25px;
